# automacao-ccm

./: .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
assets/: janabril2026_amostra_5x5.xlsx
docker/: Dockerfile  docker-compose.yml
docs/: descrição.md
src/adapters/: __init__.py
src/core/: __init__.py  circuit_breaker_config.py  circuit_breaker_utils.py  dtos.py  orchestrator.py  registry.py
src/ports/: __init__.py  data_source_port.py  municipality_port.py  storage_port.py
