[project]
name = "src"
version = "1.0.0"
description = ""
authors = [
    { name = "Giovani Liskoski Zanini", email = "giovanilzanini@hotmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pylint (>=4.0.6,<5.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
]

[tool.mypy]
strict = true
